--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -21,13 +21,16 @@
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
+<a href="/logout" class="logout-btn">
+    Logout
+</a>
+
 <body>
     <!-- Main page heading -->
     <h1>Orders</h1>
 
     <!-- Navigation links -->
     <div class="nav-links">
-        <a href="/">Home</a> |
         <a href="/cashier">Cashier</a> |
         <a href="/cashier/orders">Orders</a> |
         <a href="/cashier/transactions">Transactions</a>
