--- a/views/customer_order_page.ejs
+++ b/views/customer_order_page.ejs
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="/css/customer_style.css">
 </head>
 
+<!-- Google Translate widget container positioned fixed in bottom right -->
 <div id="google_translate_element" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 
+<!-- Google Translate Initialization Script -->
 <script type="text/javascript">
     function googleTranslateElementInit() {
         new google.translate.TranslateElement({
@@ -20,6 +22,7 @@
     }
 </script>
 
+<!-- Load Google Translate API script -->
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <body>
@@ -28,10 +31,12 @@
         <h1>Menu</h1>
         <button class="home-button" onclick="goToLogin()">Home</button>
 
+        <!-- Weather widget placeholder -->
         <div id="weather-widget">
             Loading weather...
         </div>
         
+        <!-- Weather Fetching Script -->
         <script>
         async function fetchWeather() {
             try {
