--- a/views/menu_inventory.ejs
+++ b/views/menu_inventory.ejs
@@ -9,8 +9,10 @@
     <script src="/js/manager_logic.js"></script>
 </head>
 
+<!-- Google Translate widget container positioned fixed in bottom right -->
 <div id="google_translate_element" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 
+<!-- Google Translate Initialization Script -->
 <script type="text/javascript">
     function googleTranslateElementInit() {
         new google.translate.TranslateElement({
@@ -21,8 +23,10 @@
     }
 </script>
 
+<!-- Load Google Translate API script -->
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
+<!-- Google OAuth logout button  -->
 <a href="/logout" class="logout-btn">
     Logout
 </a>
@@ -149,10 +153,12 @@
         <p>Footer</p>
     </footer>
 
+    <!-- Weather widget placeholder -->
     <div id="weather-widget">
         Loading weather...
     </div>
     
+    <!-- Weather Fetching Script -->
     <script>
     async function fetchWeather() {
         try {
