--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -7,8 +7,10 @@
     <title>Transactions</title>
 </head>
 
+<!-- Google Translate widget container positioned fixed in bottom right -->
 <div id="google_translate_element" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 
+<!-- Google Translate Initialization Script -->
 <script type="text/javascript">
     function googleTranslateElementInit() {
         new google.translate.TranslateElement({
@@ -19,8 +21,10 @@
     }
 </script>
 
+<!-- Load Google Translate API script -->
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
+<!-- Google OAuth logout button  -->
 <a href="/logout" class="logout-btn">
     Logout
 </a>
@@ -80,10 +84,12 @@
         </tbody>
     </table>
 
+    <!-- Weather widget placeholder -->
     <div id="weather-widget">
         Loading weather...
     </div>
     
+    <!-- Weather Fetching Script -->
     <script>
     async function fetchWeather() {
         try {
