--- a/views/cashier_order_page.ejs
+++ b/views/cashier_order_page.ejs
@@ -24,10 +24,12 @@
     <div class = "wrapper-class">
         <div class= "menu-items">
             <!--Will display all the available menu items using the database-->
-            <% for (var i in menu_items) {%>
+            <% for (var i in menu_items) {
+                let safeName = menu_items[i].name.toLowerCase().replace(/\s+/g, '_');
+                %>
                 <button class = "menu-item-button" 
                     onclick="openPopup('<%=menu_items[i].name%>', '<%=menu_items[i].price%>')">
-                    <img>
+                    <img src="/tea_images/<%= safeName %>.png" alt="<%= menu_items[i].name %>">
                     <h4>Name: <%=menu_items[i].name%></h4>
                     <h6>Price: <%=menu_items[i].price%></h6>
                 </button>
@@ -40,18 +42,7 @@
         </div>
     </div>
 
-    <footer>
-        <div class = "dropdown">
-            <!--Will host the ability to change languages-->
-            <button class = "dropbtn">Change Language</button>
-            <div class = "dropdown-content">
-                <p>English</p>
-                <p>Spanish</p>
-                <p>Vietnamese</p>
-            </div>
-          </div>
-
-    </footer>
+    <footer></footer>
 
 <script src="/js/cashier-logic.js"></script>
 
@@ -88,12 +79,10 @@
         <div>
             <!--Will display all addons through the database-->
             <% for (var i in addons){%>
-                <input type="checkbox" name="addon" value="false" data-name = "<%=addons[i].name%>" data-price="<%=addons[i].price%>">
-                <label for="addon" style="display: block;">
+                <input type="checkbox" class="addon-checkbox" name = "<%= addons[i].name %>" value="false" data-name = "<%= addons[i].name %>" data-price="<%= addons[i].price %>">
                     <img height="20px" width="20px"><br>
-                    <h4><%=addons[i].name%></h4><br>
-                    <h6>Price: <%=addons[i].price%></h6>
-                </label>
+                    <span></span>
+                    <span><%= addons[i].name %> ($<%= addons[i].price %>)</span><br>
             <%}%>
         </div>
         <button onclick="returnToMenu()">Return to menu</button>
