--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -24,13 +24,15 @@
       <div id="order-summary" style="overflow-y: auto;">
         <!-- All order items will be here -->
       </div>
-      <div class = "payment-summary">
-        <!--Finalized total will be displayed here-->
-        <!-- Buttons should be fixated to the bottom of the div. -->
-        <a href="/cashier"><button>Return to Menu</button></a>
-        <button onclick="finalizeTransaction()">Finalize transaction</button>
+      <div class="payment-summary">
+        <div id="order-totals" class="order-totals">
+          <!-- Totals will be injected here -->
+        </div>
+        <div class="checkout-btn-container">
+          <a href="/cashier"><button class="checkout-btn">Return to Menu</button></a>
+          <button class="checkout-btn" onclick="finalizeTransaction()">Finalize transaction</button>
+        </div>
       </div>
-    </div>
     <footer>
     </footer>
 
