--- a/views/css/cashier-style.css
+++ b/views/css/cashier-style.css
@@ -193,3 +193,90 @@ footer{
   min-width: 120px;
   font-family: 'Arial', sans-serif;
 }
+.addon-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: start;
+  margin-top: 10px;
+}
+
+.addon-item {
+  width: calc(50% - 10px); /* two per line with spacing */
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.addon-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  padding: 10px ;
+}
+
+.order-summary{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  padding: 10px ;
+}
+.payment-summary {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 10px;
+  border: 1px solid #000;
+}
+
+.checkout-btn-container {
+  margin-top: auto;
+  display: flex;
+  gap: 10px;
+}
+
+.checkout-btn {
+  flex: 1;
+  height: 50px;
+  font-size: 16px;
+  background-color: #04AA6D;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+
+.order-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 10px;
+  background: #f9f9f9;
+  width: 100%;
+  max-width: 500px;
+  margin-bottom: 10px;
+}
+
+.order-image {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+}
+
+.order-details {
+  flex: 1;
+}
+
+.order-totals {
+  text-align: left;
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 1.5;
+}
