finished the logout

--- a/views/cashier_order_page.ejs
+++ b/views/cashier_order_page.ejs
@@ -7,11 +7,11 @@
 <body>
     <header>
     <h1>Orders</h1>
-    <!-- Weather should be dislayed here at the top right-->
-      <div class = "dropdown">
-        <button class = "dropbtn">Welcome [User]</button>
-        =
+        <!--This is where the logout button should be -->
+      <div class = "logout">
+        <a href="/logout" class="logout-btn"><button class = "logout-btn">Logout [user]</button></a>
       </div>
+      <!-- Weather should be dislayed here at the top right-->
       <div id="weather-widget" style="justify-self: right;">
         Loading weather...
     </div>
