--- a/views/css/style.css
+++ b/views/css/style.css
@@ -131,7 +131,7 @@ button {
 .x-report {
     border: 2px solid black;
     width: 400px;
-    height: 400px;
+    height: auto;
 }
 
 #inventory-forms {
